--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ai": "^4.0.30",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
     "react": "^19.0.0",
