--- a/package.json
+++ b/package.json
@@ -1,38 +1,57 @@
 {
-  "name": "generative-ui",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ai-sdk/openai": "^1.0.15",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
-    "ai": "^4.0.30",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.16.4",
-    "lucide-react": "^0.469.0",
-    "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "generative-ui",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "tsx src/lib/db/migrate.ts",
+		"db:drop": "drizzle-kit drop",
+		"db:pull": "drizzle-kit introspect",
+		"db:push": "drizzle-kit push",
+		"db:studio": "drizzle-kit studio",
+		"db:check": "drizzle-kit check"
+	},
+	"dependencies": {
+		"@ai-sdk/openai": "^1.0.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
+		"@radix-ui/react-scroll-area": "^1.2.2",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@t3-oss/env-nextjs": "^0.11.1",
+		"ai": "^4.0.32",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.38.3",
+		"drizzle-zod": "^0.6.1",
+		"framer-motion": "^11.16.4",
+		"lucide-react": "^0.469.0",
+		"nanoid": "^5.0.7",
+		"next": "15.1.4",
+		"next-themes": "^0.4.4",
+		"postgres": "^3.4.5",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@types/node": "^20",
+		"@types/pg": "^8.11.10",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.30.1",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.4",
+		"pg": "^8.13.1",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"tsx": "^4.19.2",
+		"typescript": "^5"
+	}
 }
