--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@ai-sdk/openai": "^1.0.15",
+		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-scroll-area": "^1.2.2",
 		"@radix-ui/react-slot": "^1.1.1",
@@ -32,16 +33,20 @@
 		"nanoid": "^5.0.7",
 		"next": "15.1.4",
 		"next-themes": "^0.4.4",
+		"pdf2json": "^3.1.5",
 		"postgres": "^3.4.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^11.0.5",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@types/node": "^20",
+		"@types/pdf-parse": "^1.1.4",
 		"@types/pg": "^8.11.10",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
